cmake_minimum_required(VERSION 3.20)
project("CppPrimer")

file(GLOB children ABSOULTE "${CMAKE_CURRENT_LIST_DIR}/src/*")
message("${CMAKE_CURRENT_LIST_DIR}")
foreach(child ${children})
    if(IS_DIRECTORY ${child})
        message(${child})
        add_subdirectory(${child})
    endif()
endforeach()
